Mudança no <a href >

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <img src="imagem/facebook.png" alt="facebook">
         </a>
 
-        <href href="" class="hre"></href></a>
+        <a href href="" class="hre">
             <img src="imagem/google.png" alt="google">
-        </.>
+    </a>
 
-        <href href="" class="hre"></href></a>
+        <a href href="" class="hre">
             <img src="imagem/linkedin.png" alt="linkedin">
-        </>
+    </a>
         </div>
 
         <div class="alternative">
