Alteração no button

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <input type="passwprd" id="password" name="password">
             </label>
 
-            <input type="submit" value="Sing Up">
+            <input type="submit" value="Sign Up">
         </form>
     </main>
     <section class="img">
